# layerwise-checkpoint-search

./: .gitignore  CHECKPOINT_GUIDE.md  DISCREPANCY_ANALYSIS.md  FULL_WORKFLOW_SUMMARY.md  MONITORING_GUIDE.md  PAPER_COMPARISON_ANALYSIS.md  QUICK_START.md  README.md  RESUME_GUIDE.md  ROOT_CAUSE_ANALYSIS.md  SLURM_RUN_GUIDE.md  check_progress.sh  find_checkpoints.sh  generate_checkpoint_list.py  pyproject.toml  requirements.nopyarrow.txt  test_pipeline_interactive.sh  test_quick_interactive.sh  verify_checkpoints.py
configs/: exp1_main_final9layers_fixed.yaml  mteb_all_checkpoints_last4.yaml  mteb_layersweep.yaml  mteb_layersweep_last8_410m.yaml  mteb_layersweep_test.yaml  mteb_metrics_last4_layers6plus.yaml  mteb_metrics_only_last8_410m.yaml  mteb_test.yaml  mteb_validation_main_last4.yaml
pipeline_layer_by_layer/: QUICK_START.md  README.md
scripts/: analyze_layer_extraction.py  analyze_metrics_results.py  check_checkpoints.py  check_job_progress.py  compare_with_paper.py  compute_average_main_scores.py  compute_metrics_from_completed.py  compute_representation_metrics_exp1.py  create_metrics_summary_report.py  expand_mteb_scores.py  extract_analysis_tables.py  extract_mteb_scores.py  extract_task_specific_tables.py  filter_checkpoints_for_array.py  generate_pythia_checkpoint_list.py  list_available_checkpoints.py  run_mteb_layersweep.sh  submit_60_separate_jobs.sh  submit_separate_jobs.sh  test_extraction_points.py  test_pipeline_fixed_implementation.py
slurm/: check_checkpoints.sbatch  exp1_main_final9layers_fixed.sbatch  mteb_410m_array.sbatch  mteb_bandit.sbatch  (+12 more)
(+39 files in other folders)
